2005-09-26  Moritz Schulte  <moritz@g10code.com>

	Thanks to Alessandro Rubini:

	* card.c: Include <time.h>.
	(wait_for_card): New parameter: TIMEOUT; new variables T0, T;
	return 1 in case the specified timeout elapsed without any card
	being inserted.
	(card_init): New parameter: TIMEOUT; new variable: RET; pass
	TIMEOUT to wait_for_card();
	* card.h (card_sign): Updated card_init API.

2005-07-26  Moritz Schulte  <moritz@g10code.com>

	* support.c (username_to_serialno): Renamed function to ...
	(usersdb_lookup_by_username): ... this; changed callers.
	(serialno_to_username): Renamed function to ...
	(usersdb_lookup_by_serialno): ... this; changed callers.
	(usersdb_translate): Remove const attribute for FOUND argument;
	only fill FOUND if non-NULL.
	(usersdb_lookup_by_serialno): Remove const attreibute for USERNAME
	argument.
	(usersdb_lookup_by_username): Remove const attreibute for SERIALNO
	argument.
	* support.h: Updated API.

	* card.c: Some cosmetic changes.

2005-07-13  Moritz Schulte  <moritz@g10code.com>

	* defs.h.in (POLDI_OLD_CARD_KEY_RETRIVAL_EXPLANATION): New symbol.
	(POLDI_PIN2_QUERY_MSG, POLDI_PIN3_QUERY_MSG): Change strings.

	* card.c: Include <assert.h>
	(card_info): New API, return card version information, if
	requested.
	* card.h: Update card_info() API.

2004-11-27  Moritz Schulte  <moritz@g10code.com>

	* options.c (options_parse_conf): Do not fail if file does not
	exist.

	* card.c (wait_for_new_card): Renamed to ...
	(wait_for_card): ... this; new argument: require_card_switch;
	adjust function accordingly; adjust callers.
	(card_init): Rename argument `wait_for_card' to `wait'; new
	argument: require_card_switch; pass to wait_for_card.
	* card.h (card_open): Update declaration.

2004-11-13  Moritz Schulte  <moritz@g10code.com>

	* support.c (file_to_string): NUL-terminate string.
	* card.c (wait_for_new_card): New function, merged from gscutils ...
	(card_init): ... use it here.
