@@ -1,3 +1,10 @@
+2005-10-16  Moritz Schulte  <moritz@g10code.com>
+
+	* support.c (key_filename_construct): New function.
+	Include <jnlib/string.h>.
+	Include <jnlib/xmalloc.h> instead of <../jnlib/xmalloc.h>.
+	* support.h (key_filename_construct): Declare function.
+
 2005-09-26  Moritz Schulte  <moritz@g10code.com>
 
 	Thanks to Alessandro Rubini:
